# KBoxes

./: AUTHORS  Makefile.am  Makefile.in  README.md  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  kboxes.kdevprj  kboxes.lsm
doc/: Makefile.am  Makefile.in
doc/en/: Makefile.am  Makefile.in  index.docbook
kboxes/: Makefile.am  Makefile.in  kboxes.cpp  kboxes.h  main.cpp  resource.h
kboxes/docs/: Makefile.in
kboxes/docs/en/: Makefile.am  Makefile.in  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.html
po/: Makefile.in
src/: Makefile.am  Makefile.in  kboxes.cpp  kboxes.desktop  kboxes.h  kboxesui.rc  main.cpp  resource.h
templates/: h
