####### kdevelop will overwrite this part!!! (begin)##########
dist-hook:
	-perl automoc

SUBDIRS = kboxes 

EXTRA_DIST = kboxes.kdevprj AUTHORS COPYING ChangeLog INSTALL README TODO kboxes.lsm 

####### kdevelop will overwrite this part!!! (end)############
# not a GNU package. You can remove this line, if 
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 

