####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = index-1.html index-2.html index-3.html index-4.html index-5.html index-6.html index.html 

install-data-local:
	$(mkinstalldirs) $(prefix)/doc/kboxes/
	$(INSTALL_DATA) index-1.html $(prefix)/doc/kboxes/index-1.html
	$(mkinstalldirs) $(prefix)/doc/kboxes/
	$(INSTALL_DATA) index-2.html $(prefix)/doc/kboxes/index-2.html
	$(mkinstalldirs) $(prefix)/doc/kboxes/
	$(INSTALL_DATA) index-3.html $(prefix)/doc/kboxes/index-3.html
	$(mkinstalldirs) $(prefix)/doc/kboxes/
	$(INSTALL_DATA) index-4.html $(prefix)/doc/kboxes/index-4.html
	$(mkinstalldirs) $(prefix)/doc/kboxes/
	$(INSTALL_DATA) index-5.html $(prefix)/doc/kboxes/index-5.html
	$(mkinstalldirs) $(prefix)/doc/kboxes/
	$(INSTALL_DATA) index-6.html $(prefix)/doc/kboxes/index-6.html
	$(mkinstalldirs) $(prefix)/doc/kboxes/
	$(INSTALL_DATA) index.html $(prefix)/doc/kboxes/index.html

uninstall-local:
	-rm -f $(prefix)/doc/kboxes/index-1.html
	-rm -f $(prefix)/doc/kboxes/index-2.html
	-rm -f $(prefix)/doc/kboxes/index-3.html
	-rm -f $(prefix)/doc/kboxes/index-4.html
	-rm -f $(prefix)/doc/kboxes/index-5.html
	-rm -f $(prefix)/doc/kboxes/index-6.html
	-rm -f $(prefix)/doc/kboxes/index.html

####### kdevelop will overwrite this part!!! (end)############
